test/files/neg/private-local-valueclasses.check
private-local-valueclasses.scala:8: error: value s is not a member of String
  "fsda".s // not found
         ^
one error found
